# cornelio

./: .env.example  .gitignore  README.md
.github/workflows/: main.yml
backend/: benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt  security_audit.bat
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: documents.py  inference.py  query.py  reports.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/schemas/: inference.py
backend/app/services/: __init__.py  base.py  dependencies.py  document_parser.py  mlx_service.py  rag_engine.py
backend/tests/: test_health.py  test_services.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/consultas/: page.module.css  page.tsx
frontend/src/app/dashboard/: page.module.css  page.tsx
frontend/src/components/consultas/: DocumentUpload.module.css  DocumentUpload.tsx  QueryForm.module.css  QueryForm.tsx  ResponseViewer.module.css  ResponseViewer.tsx
frontend/src/components/dashboard/: MetricCard.module.css  MetricCard.test.tsx  MetricCard.tsx  ReportPanel.module.css  ReportPanel.tsx  TaskPanel.module.css  TaskPanel.tsx
frontend/src/components/layout/: MainLayout.module.css  MainLayout.tsx  Sidebar.module.css  Sidebar.tsx  (+2 more)
frontend/src/context/: LanguageContext.tsx  NotificationContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/locales/: en.json  es.json
frontend/src/services/: api.ts  endpoints.ts
frontend/src/types/: index.ts
(+11 files in other folders)
